@@ -6,15 +6,15 @@ install:
 	mkdir -p -m 755 /usr/share/doc/ftransc 2> /dev/null || :
 	install -m 644 Changelog README AUTHORS Makefile /usr/share/doc/ftransc
 	install -m 644 ftransc.1.gz /usr/share/man/man1
-	mkdir -p -m 775 ~/.gnome2/nautilus-scripts/ftransc 2> /dev/null || :
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ MP3
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ WMA
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ AAC
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ OGG
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ FLAC
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ WAV
-	ln -s /usr/local/bin/ftransc ~/.gnome2/nautilus-scripts/ftransc/convert\ to\ MPC
-	chown ${SUDO_USER}:${SUDO_USER} ~/.gnome2/nautilus-scripts/ftransc/
+	mkdir -p -m 775 ~/.local/share/nautilus/scripts/ftransc 2> /dev/null || :
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ MP3
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ WMA
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ AAC
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ OGG
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ FLAC
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ WAV
+	ln -s /usr/local/bin/ftransc ~/.local/share/nautilus/scripts/ftransc/convert\ to\ MPC
+	chown ${SUDO_USER}:${SUDO_USER} ~/.local/share/nautilus/scripts/ftransc/
 	mkdir -m 755 /etc/ftransc 2> /dev/null || :
 	install -m 644 config/presets.conf /etc/ftransc
 	mkdir -p -m 755 /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc/utils 2> /dev/null || :
@@ -31,7 +31,7 @@ uninstall:
 	rm -f /usr/local/bin/ftransc_qt
 	rm -f /usr/share/man/man1/ftransc.1.gz
 	rm -r -f /usr/share/doc/ftransc
-	rm -r -f ~/.gnome2/nautilus-scripts/ftransc
+	rm -r -f ~/.local/share/nautilus/scripts/ftransc
 	rm -r -f /etc/ftransc
 	rm -r -f /usr/lib/python$(MAJOR).$(MINOR)/dist-packages/ftransc
 	rm -r -f /usr/lib/rhythmbox/plugins/ftransc
