@@ -41,6 +41,14 @@ normal  = -vn -acodec flac -compression_level 5
 low     = -vn -acodec flac -compression_level 3
 tiny    = -vn -acodec flac -compression_level 1
 
+[avi_int]                                   # AVI Video options
+insane  = -vcodec mpeg4 -vtag divx -vb 2000k -acodec libmp3lame -ac 2 -ab 128k
+extreme = -vcodec mpeg4 -vtag divx -vb 1700k -acodec libmp3lame -ac 2 -ab 128k
+high    = -vcodec mpeg4 -vtag divx -vb 1400k -acodec libmp3lame -ac 2 -ab 128k
+normal  = -vcodec mpeg4 -vtag divx -vb 1300k -acodec libmp3lame -ac 2 -ab 128k
+low     = -vcodec mpeg4 -vtag divx -vb 900k -acodec libmp3lame -ac 2 -ab 128k
+tiny    = -vcodec mpeg4 -vtag divx -vb 600k -acodec libmp3lame -ac 2 -ab 128k
+
 [mpc_ext]                                   # mppenc options
 insane  = --overwrite --braindead
 extreme = --overwrite --insane
