@@ -3,7 +3,7 @@ NO_TAGS             = False
 SILENT              = False  
 VERSION             = '5.1.0'
 LOGFILE             = '/dev/null'
-SUPPORTED_FORMATS   = set(['mp3', 'wma', 'wav', 'ogg', 'flac', 'm4a', 'mpc', 'wv'])
+SUPPORTED_FORMATS   = set(['mp3', 'wma', 'wav', 'ogg', 'flac', 'm4a', 'mpc', 'wv', 'avi'])
 EXTERNAL_FORMATS    = set(["mpc", "wv"])
 INTERNAL_FORMATS    = SUPPORTED_FORMATS - EXTERNAL_FORMATS
 EXTERNAL_ENCODERS   = {
